--- a/src/Glue.Delivery.Core.UnitTests/Glue.Delivery.Core.UnitTests.csproj
+++ b/src/Glue.Delivery.Core.UnitTests/Glue.Delivery.Core.UnitTests.csproj
@@ -8,8 +8,10 @@
 
     <ItemGroup>
         <PackageReference Include="AutoFixture" Version="4.16.0" />
+        <PackageReference Include="AutoMapper" Version="10.1.1" />
         <PackageReference Include="FluentAssertions" Version="5.10.3" />
         <PackageReference Include="Microsoft.NET.Test.Sdk" Version="16.9.4" />
+        <PackageReference Include="Moq.EntityFrameworkCore" Version="5.0.0.2" />
         <PackageReference Include="NSubstitute" Version="4.2.2" />
         <PackageReference Include="xunit" Version="2.4.1" />
         <PackageReference Include="xunit.runner.visualstudio" Version="2.4.3">
