--- a/src/Glue.Delivery.WebApi/Glue.Delivery.WebApi.csproj
+++ b/src/Glue.Delivery.WebApi/Glue.Delivery.WebApi.csproj
@@ -6,7 +6,9 @@
     </PropertyGroup>
 
     <ItemGroup>
+        <PackageReference Include="FluentValidation.AspNetCore" Version="10.1.0" />
         <PackageReference Include="MediatR.Extensions.Microsoft.DependencyInjection" Version="9.0.0" />
+        <PackageReference Include="Microsoft.AspNetCore.Mvc.NewtonsoftJson" Version="5.0.5" />
         <PackageReference Include="Serilog.AspNetCore" Version="4.1.0" />
         <PackageReference Include="Serilog.Sinks.File" Version="4.1.0" />
         <PackageReference Include="Swashbuckle.AspNetCore" Version="6.1.2" />
@@ -14,6 +16,10 @@
 
     <ItemGroup>
       <ProjectReference Include="..\Glue.Delivery.Core\Glue.Delivery.Core.csproj" />
+    </ItemGroup>
+
+    <ItemGroup>
+      <Folder Include="Validators" />
     </ItemGroup>
 
 </Project>
